--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </tr>
                     <tr style="height: 23px">
                         <td class="s9"></td>
-                        <td class="s15" colspan="2"><a href="tel:+2347043877574">+234 704 387 7574</a></td>
+                        <td class="s15" colspan="2"><a href="tel:+2347043877574" class="phone-link">📞 +234 704 387 7574</a></td>
                         <td class="s4"></td>
                         <td class="s16"></td>
                         <td class="s4"></td>
